force-app/main/default/objects/Commission_Statement__c/Commission_Statement__c.object-meta.xml
<CustomObject>
    <description>Container for Direct Bill Commission Line Items</description>
    <label>Commission Statement</label>
    <nameField>
        <label>Commission Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>