force-app/main/default/objects/Commission_Statement__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission Statements (Account)</relationshipLabel>
    <relationshipName>Commission_Statements2</relationshipName>
    <type>Lookup</type>
</CustomField>