force-app/main/default/objects/Commission_Statement__c/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission Statements</relationshipLabel>
    <relationshipName>Commission_Statements1</relationshipName>
    <type>Lookup</type>
</CustomField>