force-app/main/default/objects/Commission_Statement__c/fields/TotalCommissionAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalCommissionAmount__c</fullName>
    <description>Sum of all Account/contact commission records for the statement period</description>
    <inlineHelpText>Auto generated from &quot;Generate Commission Line Items&quot;</inlineHelpText>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>