force-app/main/default/objects/Commission_Statement__c/fields/Unique_Statement_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Statement_ID__c</fullName>
    <description>Unique Statement ID</description>
    <displayFormat>{000000}</displayFormat>
    <label>Statement ID</label>
    <type>AutoNumber</type>
</CustomField>