force-app/main/default/objects/Commission_Statement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Billing_Company__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Statement_Total__c</columns>
    <columns>Statement_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>